; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mp.c_free_warm_timer_call.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mp.c_free_warm_timer_call.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cpu_warm_lock = common dso_local global i32 0, align 4
@cpu_warm_call_list = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @free_warm_timer_call to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_warm_timer_call(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %4 = call i32 (...) @splsched()
  store i32 %4, i32* %3, align 4
  %5 = call i32 @simple_lock(i32* @cpu_warm_lock)
  %6 = load i64, i64* %2, align 8
  %7 = trunc i64 %6 to i32
  %8 = call i32 @enqueue_head(i32* @cpu_warm_call_list, i32 %7)
  %9 = call i32 @simple_unlock(i32* @cpu_warm_lock)
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @splx(i32 %10)
  ret void
}

declare dso_local i32 @splsched(...) #1

declare dso_local i32 @simple_lock(i32*) #1

declare dso_local i32 @enqueue_head(i32*, i32) #1

declare dso_local i32 @simple_unlock(i32*) #1

declare dso_local i32 @splx(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
